AUV_ws/log/build_2020-10-15_05-53-36/gate_detection/stderr.log
  File "/home/fatma/AUV_ws/install/gate_detection/lib/python3.6/site-packages/gate_detection/client_node.py", line 38
    'Result of find_gate_location: for"%d" is "%d"' "%                               # CHANGE
                                                                                            ^
SyntaxError: EOL while scanning string literal

